2010-10-20  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure: Added CQ STARM target.
	* boards/CQ_STARM/mcuconf.h: New.
	* boards/CQ_STARM/board.mk: New.
	* boards/CQ_STARM/board.h: New.
	* boards/CQ_STARM/board.c: New.

2010-10-19  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STM32_PRIMER2/board.mk (BOARDSRC): Use common/hw_config.c.
	* boards/OLIMEX_STM32_H103/board.mk (BOARDSRC): Likewise.

	* boards/common/hw_config.c: Move board specific functions to ...
	* boards/STM32_PRIMER2/board.c (USB_Cable_Config, set_led): ... here.
	* boards/OLIMEX_STM32_H103/board.c (USB_Cable_Config, set_led): Ditto.

	* boards/{OLIMEX_STM32_H103,STM32_PRIMER2}/hw_config.c: Removed.
	* boards/common/hw_config.c: New file (was: boards/*/hw_config.c).

	* .gitignore: New file.

2010-10-16  NIIBE Yutaka  <gniibe@fsij.org>

	Implement "INTERNAL AUTHENTICATE" command.

	* src/gnuk.h (BY_USER, BY_RESETCODE, BY_ADMIN): New defines.
	(NUM_ALL_PRV_KEYS): Now it's 3 (was: 2).

	* src/openpgp.c (INS_INTERNAL_AUTHENTICATE): New define.
	(cmd_internal_authenticate): New function.
	(cmds): Added INS_INTERNAL_AUTHENTICATE.
	(cmd_change_password): Use BY_USER.
	(cmd_reset_user_password): Use BY_USER, BY_RESETCODE, BY_ADMIN.
	(cmd_pso): Load GPG_KEY_FOR_DECRYPTION here.
	(cmd_pso): Removed adding status word into res_APDU...
	* src/call-rsa.c (rsa_sign): and moved adding status word into
	res_APDU here.

	* src/ac.c (pw1_keystring): New variable.
	(ac_reset_pso_other): Clear pw1_keystring.
	(verify_pso_cds): Use BY_USER.
	(verify_pso_other): Just check the length of password here, and
	defer real check to cmd_pso or cmd_internal_authenticate.

2010-10-14  NIIBE Yutaka  <gniibe@fsij.org>

	Adding 'configure' support.
	* src/configure: New file.
	* src/Makefile.in: Renamed from src/Makefile.
	* src/config.h: Renamed from src/config.h.
	* src/gnuk.ld: Renamed from src/gnuk.ld.

	Adding DFU_SUPPORT.
	* boards/common/hwinit0.c: New file adding DFU_SUPPORT.
	* boards/common/hwinit1.c: New file.