@@ -1,0 +1,2 @@
+# Email         # 4-byte serial number, separated by ':'
+gniibe@fsij.org 00:00:00:01
